
Version 1.0.0(Jan 30th, 2021)
 - The GUI can be used to download any media supported by youtube-dl.
 - The GUI can show all available media a url can offer.
 - The GUI allows user to choose what media entry offered by a url they want to download.
 - The GUI offers a preset list of options to choose from to select what media entry
    offered by a url they want to download.
 - The GUI offers an ability to change preset options or add new ones making it possible
    to use the GUI to automate any use case supported by youtube-dl.
 - The GUI offers an ability to download single media or multiple medias in batches.
 - Works on Linux and Windows.

Version 1.1.0(unreleased)
[All]
 - Add polish translations.

[Windows]
 - Add ability to automatically download youtube-dl binary on first run and a button
   in the configuration tab to update it on demand.