@@ -34,11 +34,19 @@ basicdownloader::basicdownloader( Context& ctx ) :
 {
 	this->setAsActive() ;
 
+	m_ui.rbYoutubeDl->setChecked( true ) ;
+
 	m_ui.pbCancel->setEnabled( false ) ;
 
 	m_ui.plainTextEdit->setReadOnly( true ) ;
 
 	m_ui.labelFailedToFixExe->setVisible( false ) ;
+
+	m_ui.rbWget->setEnabled( false ) ;
+	m_ui.rbWget->setObjectName( "false" ) ;
+
+	m_ui.rbYoutubeDl->setEnabled( false ) ;
+	m_ui.rbYoutubeDl->setObjectName( "false" ) ;
 
 	connect( m_ui.pbList,&QPushButton::clicked,[ this ](){
 
@@ -55,6 +63,22 @@ basicdownloader::basicdownloader( Context& ctx ) :
 	connect( m_ui.pbQuit,&QPushButton::clicked,[ this ](){
 
 		this->appQuit() ;
+	} ) ;
+
+	connect( m_ui.rbYoutubeDl,&QRadioButton::toggled,[ this ]( bool e ){
+
+		if( e ){
+
+			m_ctx.Engines().setDefaultEngine( "youtube-dl" ) ;
+		}
+	} ) ;
+
+	connect( m_ui.rbWget,&QRadioButton::toggled,[ this ]( bool e ){
+
+		if( e ){
+
+			m_ctx.Engines().setDefaultEngine( "wget" ) ;
+		}
 	} ) ;
 }
 
@@ -87,6 +111,8 @@ void basicdownloader::printDefaultBkVersionInfo()
 		}
 	}else{
 		if( exe.isEmpty() ){
+
+			this->disableEngine( engine ) ;
 
 			auto m = tr( "Failed to find version information, make sure \"%1\" is installed and works properly" ).arg( engine.name() )  ;
 
@@ -148,6 +174,38 @@ const QStringList& basicdownloader::currentVersionData()
 	return m_output ;
 }
 
+void basicdownloader::disableEngine( const engines::engine& engine )
+{
+	const auto& m = engine.name() ;
+
+	if( m == "youtube-dl" ){
+
+		m_ui.rbYoutubeDl->setEnabled( false ) ;
+		m_ui.rbYoutubeDl->setObjectName( "false" ) ;
+
+	}else if( m == "wget" ){
+
+		m_ui.rbWget->setEnabled( false ) ;
+		m_ui.rbWget->setObjectName( "false" ) ;
+	}
+}
+
+void basicdownloader::enableEngine( const engines::engine& engine )
+{
+	const auto& m = engine.name() ;
+
+	if( m == "youtube-dl" ){
+
+		m_ui.rbYoutubeDl->setEnabled( true ) ;
+		m_ui.rbYoutubeDl->setObjectName( "true" ) ;
+
+	}else if( m == "wget" ){
+
+		m_ui.rbWget->setEnabled( true ) ;
+		m_ui.rbWget->setObjectName( "true" ) ;
+	}
+}
+
 void basicdownloader::retranslateUi()
 {
 	this->resetMenu() ;
@@ -204,8 +262,12 @@ void basicdownloader::checkAndPrintInstalledVersion( const engines::engine& engi
 
 			m_tabManager.disableAll() ;
 
+			this->disableEngine( ctx.engine ) ;
+
 			this->enableQuit() ;
 		}else{
+			this->enableEngine( ctx.engine ) ;
+
 			auto c = "[media-downloader] " + tr( "Found version" ) + ": " + ctx.engine.versionString( ctx.data ) ;
 
 			m_output.append( ctx.version + c ) ;
@@ -353,7 +415,7 @@ void basicdownloader::list()
 
 	auto url = m_ui.lineEditURL->text() ;
 
-	const auto& backend = m_ctx.Engines().getEngineByUrl( url ) ;
+	const auto& backend = m_ctx.Engines().defaultEngine() ;
 
 	auto args = backend.defaultListCmdOptions() ;
 	args.append( url.split( ' ' ) ) ;
@@ -367,7 +429,7 @@ void basicdownloader::download()
 
 	auto m = utility::split( url,' ',true ) ;
 
-	const auto& engine = m_ctx.Engines().getEngineByUrl( url ) ;
+	const auto& engine = m_ctx.Engines().defaultEngine() ;
 
 	this->download( engine,m_ui.lineEditOptions->text(),m,false ) ;
 }
@@ -422,6 +484,9 @@ void basicdownloader::enableQuit()
 
 void basicdownloader::enableAll()
 {
+	m_ui.rbWget->setEnabled( m_ui.rbWget->objectName() == "true" ) ;
+	m_ui.rbYoutubeDl->setEnabled( m_ui.rbYoutubeDl->objectName() == "true" ) ;
+
 	m_ui.pbEntries->setEnabled( true ) ;
 	m_ui.label_2->setEnabled( true ) ;
 	m_ui.label->setEnabled( true ) ;
@@ -434,6 +499,8 @@ void basicdownloader::enableAll()
 
 void basicdownloader::disableAll()
 {
+	m_ui.rbWget->setEnabled( false ) ;
+	m_ui.rbYoutubeDl->setEnabled( false ) ;
 	m_ui.pbQuit->setEnabled( false ) ;
 	m_ui.pbEntries->setEnabled( false ) ;
 	m_ui.label_2->setEnabled( false ) ;
