@@ -73,7 +73,7 @@ playlistdownloader::playlistdownloader( Context& ctx ) :
 
 		auto url = m_ui.lineEditPLUrl->text() ;
 
-		const auto& engine = m_ctx.Engines().getEngineByUrl( url ) ;
+		const auto& engine = m_ctx.Engines().defaultEngine() ;
 
 		m_tabManager.basicDownloader().download( engine,options,url ) ;
 	} ) ;
