@@ -13,6 +13,7 @@ Version 1.0.0(Jan 30th, 2021)
 Version 1.1.0(unreleased)
 [All]
  - Add polish translations.
+ - Add support for downloading media using wget in addition to youtube-dl.
 
 [Windows]
  - Add ability to automatically download youtube-dl binary on first run and a button
